--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         
         <div class="form-group">
             <h3>Say "take my selfie"</h3>
+            <h4>Wait for 2 second</h4>
             <label>Your voice output : </label>
             <textarea class="form-control" id="textbox" readonly="true"></textarea>
 
